# llvm-project

clang/examples/MulToShift/: CMakeLists.txt  MulToShift.cpp  example.c  output.txt
clang/examples/MulToShift/test/: .lit_test_times.txt  lit.cfg  test.cpp
clang/examples/MulToShift/test/Output/: test.cpp.script
clang/examples/VarRenamer/: CMakeLists.txt  VarRenamer.cpp  run_tests.sh
clang/examples/VarRenamer/test/: .lit_test_times.txt  lit.cfg  rename-test.cpp
clang/examples/VarRenamer/test/Output/: rename-test.cpp.script
